@@ -14,6 +14,7 @@ Version 1.3.19+svn:
  * miscellaneous and bug fixes:
    * units with a death sound but no death animation now play their death
      sound correctly
+   * Fixed parser problems with \r\r in files
    * cleanups and a compiler fix based on patch #911
    * the detection of the savegame version was done after parsing the savegame
      this could lead to crashes when loading 1.2 savegames (debian bug 467088)
